--- a/style.css
+++ b/style.css
@@ -70,4 +70,19 @@ html, body {
     padding-top: 2%;
     padding-bottom: 2%;
     padding-left: 2%;
+    margin: 0;
+}
+
+.quiz {
+    width: 50%;
+    height: 100px;
+    text-align: center;
+    font-size: 20pt;
+    font-family: Helvetica;
+    color: #FFFFFF;
+    background-color: #1E1E1E;
+    border: none;
+    margin: 0;
+    float: left;
+    cursor: pointer;
 }
